segundo push con modificaciones tanto en html como en css para actualizar el diseño de la pagina. Las paginas que se encuentran con responsive son: index.html, cuidado facial y labios esta recien empezada

--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
 
                 <div id="search-bar">
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <input id="barra" class="form-control me-2" type="search" placeholder="Search"
+                            aria-label="Search">
                         <button class="btn" id="btn-outline-success" type="submit">Search</button>
                     </form>
                 </div>
+                <!--termina heaedr-->
 
                 <!--Inicia div iconos-->
                 <div class="iconos">
@@ -54,6 +56,7 @@
 
                     </div>
                 </div>
+                <!--termina div iconos-->
             </div>
             </div>
         </section>
@@ -70,19 +73,27 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                            <a class="nav-link dropdown-toggle"
+                                href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/maquillaje.html"
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Maquillaje
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Labios</a></li>
-                                <li><a class="dropdown-item" href="#">Ojos</a></li>
-                                <li><a class="dropdown-item" href="#">Rostro</a></li>
+                                <li><a class="dropdown-item"
+                                        href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/labios.html">Labios</a>
+                                </li>
+                                <li><a class="dropdown-item"
+                                        href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/ojos.html">Ojos</a>
+                                </li>
+                                <li><a class="dropdown-item"
+                                        href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/rostro.html">Rostro</a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                            <a class="nav-link dropdown-toggle"
+                                href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/cuidado-facial.html"
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Cuidado facial
                             </a>
                             <ul class="dropdown-menu">
@@ -104,7 +115,6 @@
                 </div>
             </div>
         </nav>
-
         <!--Ends nav-->
     </header>
 
@@ -354,7 +364,6 @@
             </article>
         </section>
         <hr>
-
         <!--Fin grid III-->
 
         <!--Inicia parte fotos info-->
