--- a/paginas/cuidado-facial.html
+++ b/paginas/cuidado-facial.html
@@ -71,19 +71,27 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                            <a class="nav-link dropdown-toggle"
+                                href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/maquillaje.html"
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Maquillaje
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Labios</a></li>
-                                <li><a class="dropdown-item" href="#">Ojos</a></li>
-                                <li><a class="dropdown-item" href="#">Rostro</a></li>
+                                <li><a class="dropdown-item"
+                                        href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/labios.html">Labios</a>
+                                </li>
+                                <li><a class="dropdown-item"
+                                        href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/ojos.html">Ojos</a>
+                                </li>
+                                <li><a class="dropdown-item"
+                                        href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/rostro.html">Rostro</a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                            <a class="nav-link dropdown-toggle"
+                                href="file:///C:/Users/Luis/Desktop/coder-proyecto/paginas/cuidado-facial.html"
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Cuidado facial
                             </a>
                             <ul class="dropdown-menu">
